--- a/libs/Com.Core.Dotsafe.Infrastructure/Com.Core.Dotsafe.Infrastructure.csproj
+++ b/libs/Com.Core.Dotsafe.Infrastructure/Com.Core.Dotsafe.Infrastructure.csproj
@@ -28,6 +28,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Com.Core.Dotsafe.Domain\Com.Core.Dotsafe.Domain.csproj" />
+    <ProjectReference Include="..\Com.Core.Dotsafe.Framework\Com.Core.Dotsafe.Framework.csproj" />
   </ItemGroup>
 
 </Project>
