--- a/Com.Core.Dotsafe.UI/Com.Core.Dotsafe.UI.csproj
+++ b/Com.Core.Dotsafe.UI/Com.Core.Dotsafe.UI.csproj
@@ -1,7 +1,8 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <UserSecretsId>5a8bc96b-b2a0-4e3d-b37e-f04ef8869f84</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
